[package]
name = "cower-rs"
version = "0.2.0"
authors = ["Brandon Mittman <brandonmittman@gmail.com>"]

[profile.release]
lto = true

[dependencies]
clap           = "*"
time           = "*"
bitflags       = "*"
isatty         = "*"
stderrlog      = "*"
log            = "*"
ferris-says    = "*"
serde          = "*"
serde_json     = "*"
serde_derive   = "*"
failure        = "*"
url            = "*"

[build-dependencies]
bindgen = "*"
